umbrello/widgets/messagewidget.cpp - In function setY() do not emit sigMessageMoved() if   UMLApp::app()->document()->loading()

umbrello/widgets/objectwidget.cpp
- In function setY() do not moveEvent(0) if
  UMLApp::app()->document()->loading()

BUG:336201